# scene_gen

./: .gitignore  LICENSE  README.md  Replicate_models_documentations.md  __init__.py  manifest.json  preview_player.js  pyproject.toml  requirements.txt  scene-gen-movies_workflow.json  scene-gen_workflow.json  scene_gen_movies_node.py  scene_gen_node.py  suno_prompt_guidelines.md  suno_rap_lyrics.md  suno_rap_lyrics_pl.md  suno_tech_lyrics.md  video_generation_prompt.md  video_generation_prompt_geek.md  youtube_description.md
js/: scene_gen.js
web/: scene_gen.js
