[project]
name = "scene_gen"
version = "1.0.5"
description = "Transform your music into professional music videos with AI automation. This powerful node uses Gemini AI for intelligent audio analysis and Replicate cutting-edge video models (Wan 2.5, Kling Turbo, Veo 3.1, Hailuo) to generate synchronized visual content. Features automated scene planning, character consistency, beat-perfect editing, and seamless integration with Premiere Pro DaVinci Resolve via EDL export. Export nodes and prompts for free rendering. Google Gemini functions only as an agent engine for analysis and orchestration, not for generating images or videos."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Custom" }
dependencies = [
    "google-generativeai",
    "numpy",
    "scipy",
    "replicate",
    "requests"
]

[project.urls]
Repository = "https://github.com/lazniak/scene_gen"

[tool.comfy]
PublisherId = "lazniak"
DisplayName = "Scene Gen - Agent for music videos"
Icon = ""
